opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ocaml_plugin"
bug-reports: "https://github.com/janestreet/ocaml_plugin/issues"
dev-repo: "https://github.com/janestreet/ocaml_plugin.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ocaml_plugin" "--root" "." "-j" jobs]
]
depends: [
  "async"
  "core"
  "jbuilder"
  "ppx_driver"
  "ppx_jane"
  "sexplib"
  "ocamlbuild"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Automatically build and dynlink OCaml source files
"
