opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ocaml_plugin"
bug-reports: "https://github.com/janestreet/ocaml_plugin/issues"
dev-repo: "git+https://github.com/janestreet/ocaml_plugin.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ocaml_plugin" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "core"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "sexplib"
  "ocaml-migrate-parsetree" {>= "0.4"}
  "ocamlbuild"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Automatically build and dynlink OCaml source files
"
