opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ocaml_plugin"
bug-reports: "https://github.com/janestreet/ocaml_plugin/issues"
dev-repo: "git+https://github.com/janestreet/ocaml_plugin.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ocaml_plugin/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "core"
  "core_kernel"
  "core_unix"
  "ppx_jane"
  "sexplib"
  "dune"        {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Automatically build and dynlink OCaml source files"
description: "
"
